feat: manage posts
* doc(api): add category to post

* feat: get all posts

* feat: crupdate post

* feat: get post by id and delete
